# bot_email

./: .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
core/gemini/: ai_config.py  apps.py  models.py  serializer.py  signals.py  views.py
core/gemini/migrations/: 0001_initial.py  0002_alter_geminiai_text_body_alter_geminiai_title.py
core/report/: apps.py  models.py  serializer.py  signals.py  views.py
core/report/migrations/: 0001_initial.py  0002_report_gemini_ai_alter_report_content_and_more.py
core/user/: authenticator.py  models.py  serializer.py  signals.py  views.py
core/user/migrations/: 0001_initial.py  0002_userquestion.py
src/bot_email/: database.py  main.py  models.py  schemas.py  utils.py
utils/: ai_config.py  generate_report.py
